css/mystyle.css
/* ... */
/* Customization of h1 element in banner class */
.home-banner h1 {
	text-align: center;
	font-size: 5rem;
	z-index: 1;
	padding: 20px;
	margin: 15px;
	color: #fff;
	opacity: 0.7;
}

/* Customization of home-vidcontainer class */
.home-vidcontainer {
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	width: 100%;
}

/* Customization of dividing lines */
hr.rounded {
	border-radius: 6px;
	border-top: 3px solid var(--h3-color);
	margin: 25px;
}

/* Customization of home-aboutus ul and home-aboutus p elements */
.home-aboutus ul, .home-aboutus p {
	color: var(--p-color);
	text-align: center;
	font-weight: normal;
	font-size: 18px;
	font-family: helvetica, arial, sans-serif;
	padding-left: 40px;
	padding-right: 40px;
	list-style-type: none;
}

/* Customization of home-aboutus li element */
.home-aboutus li {
	padding-bottom: 10px;
}

/* 3 column design for industries section on index */
/* src: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns_responsive */
.hcolumn1, .hcolumn2, .hcolumn3 {
    float: left;
    width: 33.33%;
    padding: 15px;
	text-align: center;
}

/* Clear floats after the columns using the row class */
.row::after {
    content: "";
    display: table;
    clear: both;
}

/* Responsive design for resizing images */
img {
	max-width: 100%;   
	height: auto;
}	

/* Customization of home-industry class */
.home-industries {
	height: auto;
}

/* Customization of home-industry p element */
.home-industries p {
	text-align: center;
	font-size: 18px;
	padding: 0 30px;
}

/* Customization of testimonial section */
/* Inspiration: https://codepen.io/aimieisanxious/pen/XWxOeya */
/* Customization of home-testimonial-container class */
.home-testimonial-container {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0 40px;
	margin: 30px 0 50px;
	position: relative;
	flex-direction: column;
}

/* Customization of home-testimonials class */
.home-testimonials {
	display: flex;
	justify-content: space-evenly;
	align-items: space-evenly;
}

/* Customization of home-testimonial h1 element */
.home-testimonial-container h1 {
	padding: 10px 10px 15px;
	text-align: center;
	width: 100%;
	margin: 0 auto 30px;
}

/* Customization of home-testimonial class */
.home-testimonial {
	width: 25%;
	border-radius: 10px;
	background: var(--h3-color);
	padding: 20px;
	position: relative;
	margin-bottom: 20px;
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
}

/* Customization of after the content of home-testimonial class */
.home-testimonial::after {
	content: "";
	display: block;
	position: absolute;
	bottom: -15px;
	right: 50px;
	width: 0;
	border-width: 15px 20px 0;
	border-style: solid;
	border-color: var(--h3-color) transparent;
}

/* Customization of home-testimonial h4 element */
.home-testimonial h4 {
	margin-bottom: 10px;
}

/* Customization of home-testimonial-author class */
.home-testimonial-author {
	font-size: 15px;
	font-weight: bold;
	color: var(--p-color);
	position: absolute;
	bottom: -40px;
	right: 0;
}

/* Customization of home-contact class */
.home-contact {
	margin: 20px;
}

/* Responsive design if the browser window is 600px or smaller */
@media screen and (max-width: 600px) {
	/* Classes starting with home-column is set to 100% width */
    [class*="hcolumn"] {
        width: 100%;
	}

	/* Customization of home-testimonials class */
	.home-testimonials {
		flex-direction: column;
		align-items: center;
	}

	/* Customization of home-testimonial class */
	.home-testimonial {
		width: 90%;
		margin-bottom: 60px;
	}

	/* Customization of home-banner h1 element */
	.home-banner h1 {
		font-size: 3rem;
	}
}
/* Lori Index Page CSS End */

/***************** 
- Owner: 	Lilit Markarian
- Date:		December 2, 2023
- Section:	Career Page CSS
- Inspired by:	
- Content from: Canva
******************/

/* Customization of banner class */
/* For the banner video I used the same sizes and a similar code to Lori's to not have very different styles on each page */
.bannercareer {
	position: relative;
	max-width: 100%;
	width: 100%;
	height: 450px;
	display: flex;
	align-items: center;
	justify-content: center;
	overflow: hidden;
}

/* Customization of vidcontainer for careers page class */
.vidcontainerc {
	position: absolute;
	overflow: hidden;
	top: 0;
	right: 0;
	z-index: -1;
	width: 100%;
	height: auto;
	transform: translate(0%,-40%);
}

/* Customization of h1 for the banner of careers page */
.bannercareer h1 {
	text-align: center;
	font-size: 3rem;
	z-index: 1;
	padding: 20px;
	margin: 15px;
	color: white;
	opacity: 0.8;
}

/* Customization of green mask over the video banner */
.mask {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: auto;
	background-color: rgba(65, 83, 79, 0.2);
}

/* Customization of cards and containers of Career page */
/* Inspired by https://www.youtube.com/watch?v=TJe8fYs0PiI */
.career-container {
	background-color: transparent;
	max-width: 1500px;
	margin: 0 auto;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0px 100px;
}

/* Customization of each column in the career container */
.columncareers1, .columncareers2, .columncareers3 {
	margin: 0 20px 25px;
	background-color: transparent;
	flex-basis: 33%;
	justify-content: center;
	text-align: center;
}

/* Adding a padding on the Cards */
.card {
	padding: 15px 25px;
}

/* I got a little help from chatGPT to know how to do the responsive part of cards. used only 2 lines, the flex-direction and flex-basis */
@media (max-width: 600px) {
	/* Career Container to have a padding and center when the screen is smaller */
	.career-container {
	  padding: 0 20px; 
	  flex-direction: column;
	  align-items: center;
	}
	
	/* Customization of the career columns */
	.columncareers1, .columncareers2, .columncareers3 {
	  flex-basis: 100%; 
	  margin: 0 0 25px;
	}
}
/* ... */

